# ChangeLog for media-sound/teamspeak-client-bin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak-client-bin/ChangeLog,v 1.37 2014/11/14 01:39:45 tomwij Exp $

  14 Nov 2014; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  Maintainer needed.

*teamspeak-client-bin-3.0.13.1 (09 Nov 2013)

  09 Nov 2013; Tom Wijsman <TomWij@gentoo.org>
  +teamspeak-client-bin-3.0.13.1.ebuild:
  Version bump to 3.0.11.1; fixes bug #490570, reported by Stephan Kupfer and
  pierigno.

*teamspeak-client-bin-3.0.13 (12 Oct 2013)

  12 Oct 2013; Tom Wijsman <TomWij@gentoo.org>
  +teamspeak-client-bin-3.0.13.ebuild:
  Version bump to 3.0.13, reported by Jarry and Karsten in bug #487662 and bug
  #487760. Removed not used sound backend, reported and patch by Karol Herbs in
  bug #484080.

*teamspeak-client-bin-3.0.12 (21 Sep 2013)

  21 Sep 2013; Tom Wijsman <TomWij@gentoo.org>
  +teamspeak-client-bin-3.0.12.ebuild, metadata.xml:
  Version bump to 3.0.12, fixes bug #485540 reported by Markus Saarinen.

*teamspeak-client-bin-3.0.11.1 (07 Aug 2013)

  07 Aug 2013; Tom Wijsman <TomWij@gentoo.org>
  +teamspeak-client-bin-3.0.11.1.ebuild, -teamspeak-client-bin-3.0.10.1.ebuild,
  -teamspeak-client-bin-3.0.10.ebuild, -teamspeak-client-bin-3.0.9.2.ebuild:
  Version bump to 3.0.11.1. Removed old. Fixes bug #479672, reported by
  Christophe PEREZ and Stephan Kupfer.

  15 Apr 2013; Tom Wijsman <TomWij@gentoo.org>
  teamspeak-client-bin-3.0.10.1.ebuild, teamspeak-client-bin-3.0.10.ebuild,
  teamspeak-client-bin-3.0.9.2.ebuild:
  FEATURES="fetch" since we are not allowed to directly link (therefore not
  directly download) their files without express, written permission; this is
  stated at the bottom of their Downloads page, let's comply with that.

*teamspeak-client-bin-3.0.10.1 (12 Apr 2013)

  12 Apr 2013; Tom Wijsman <TomWij@gentoo.org>
  +teamspeak-client-bin-3.0.10.1.ebuild: