@@ -1,15 +1,9 @@
 AUX teamspeak3 258 SHA256 42a5e2a879af2b1f539240a75315f4ff65fdf20d90d8c3984f234ba5cf9869f3 SHA512 b587b3991e927922854f155ac61e8d923a6b84a1da88a040277d670203be7dc11b5fbf79508d3894e94a2686da1758781b158c7598c8a61b151798c6a7b1880e WHIRLPOOL 8c542bed81d5f04418b30a39ac63eb4a43f2ab9d339d7f197fd78e674e7908c8696b78c04fd5400916b30c849868adb948c79748f0ba8d1052d507fb6a9c6d3a
-DIST TeamSpeak3-Client-linux_amd64-3.0.11.1.run 32207661 SHA256 4e2787c883d90186ffb89f079575abaf1fa0b722bbe4637a3397d30cdf207d26 SHA512 7d283d82f3cdb8dd2eba8bb94bf3d1c2c7307fc98151a09ba488478a5086329a332ebd02eb27d008b432ce36be85cead8dc3871b8ebe5b93a88d9b49ca7639a3 WHIRLPOOL 7b76c7705e924c59b3c79ff3b3a2ba2e3d9231f03abccde4701f79fd531153b9f05b0962bde9143afa49abc2b707be81a35bd0252e1c4787a8c4b0db48231f32
-DIST TeamSpeak3-Client-linux_amd64-3.0.12.run 33185713 SHA256 6171e405108400ffa826c10971e5294e5263bba7fb69a02da70c7c5805d75b20 SHA512 87f49843302e36dc97b5993b3034aeda9974f457a18cc26874cf515ebcda3f21a7dfc89ab453e8647088f4cb611c1021293c25d302c1acb660b205c5f8b343f8 WHIRLPOOL b49bb2463d23858173a2e36bad99b16cd4a24510570c3ba2af5c7ad2d527a1a2b6a5a8044c875094169e28b88ee1d4868b6aab7aa9ee48cf7c5064a6af0010c3
 DIST TeamSpeak3-Client-linux_amd64-3.0.13.1.run 33207717 SHA256 211aa921c73369e074e59aa4b664c9d288f98a5f1172f9f8b006a46df5dd4856 SHA512 3d5fc5b419cfd683a0c7787f3ec4b6df14bd944db85eb0abffdbc2b14e5c913cbf77353b46cf81c89f8a34127d362f1312c3e7d6a21b9087b78a171ce0349d9c WHIRLPOOL d2ca0eb74ea5393941dc0613c5ff8462bbae484d61a8d1e2a3e7a04905e777d328e34e073c7a2394d0be6385c92e386d74617c39f7ab6fcb47b13ba5201538c0
-DIST TeamSpeak3-Client-linux_amd64-3.0.13.run 33205868 SHA256 63d851552bb55090dd637dc0506b41d1536241f34e1a8eac71d4a831623cfa49 SHA512 4c15f8c7a941d88a14fdb4c09cb0d54a118e7f3f4e9a6a0a48baf5adca29ca476958908b32acdeee34c76aa93c955447053fbf19f6e49d80b3aff92247f8a277 WHIRLPOOL fddc8921d2885da34a3fca67bb101fa49864a712d06390d9caeac4ba511f0a111fa3daafaa04e77dd6eb657e29eacb5dd8c3262b01f7903d2f489362eb4f2cb6
-DIST TeamSpeak3-Client-linux_x86-3.0.11.1.run 32889578 SHA256 836fb8ba75ab5eaf4967e0582b38198c70e1c80d0d1e8509e95a631432b081f4 SHA512 ac8e0229365dd1081a88119a325ae0efd64100a32936420e84541b4448c30f107c53110bb2795958c9e25b752e9bb495330ad016432815d2616bc07079847fa5 WHIRLPOOL 4a35e3115f8ea3d10253b96267b79a2832fb8fbaba2729ec0e10d97d0a6d184d52db2b86f71804d9cd1632f141e0d19fdc8aabbe0c6ddf8ff0ea14516dfd511e
-DIST TeamSpeak3-Client-linux_x86-3.0.12.run 33928579 SHA256 e2ce96c8465ef6e8330b818e68732dfd1c9b40b45299c86cffe33701c3f86514 SHA512 edc0f621b9f556058690aed72015cefe3df204c17ce87ab9b18f01098e5f906d625bf5ebbaadc21af5c23e66e8f4e65291082b4e9d975509953331656372c7b5 WHIRLPOOL a497c0505041761141a5b12130752be24a7e3c896fb42683b32b72999030ba2c72723eb20237b362b7df312b5f01cdf1cf896d770a24b8f41d8e522a412af3e6
+DIST TeamSpeak3-Client-linux_amd64-3.0.16.run 35784109 SHA256 62034baddf352dd2fea615f0aac9a6df7eae363bb3ed7cad78c1fb996b86773f SHA512 a65d986fe4860caf1bba8217fcf429fe4571867439e734e5838893e31167fa1f134c4cabbd3ef80d744f22298172d87496e4f025f51fd7c275781a3bc2c56838 WHIRLPOOL bf3bd39f93aa08b625e659d2cdd5ab857e0f940a344f5535f2941cce367a57b5191b61f18c7b5e63c3b051dac57ebb8c3df739ebc0fec1a721e863afc1e833c2
 DIST TeamSpeak3-Client-linux_x86-3.0.13.1.run 33947497 SHA256 0162f1cef570acde7245fb62c3ed52aa606234375a14d0bcce35500b183d9cc2 SHA512 32af801f73de876e667f31b8046baf9df6498a1ad6f71de2ca33257ee685abc80f200750e4c8e6cb5931635d31f261de9cb409f930c1e99e42be5f9543dbf062 WHIRLPOOL 69964e6b757f77c9ba87b3efa19b55ced5aa60a0ee50af3011426682832d307e4eb79554d8928f5647556258d40808eb5259d3606c7b2df27dcdb95c19078482
-DIST TeamSpeak3-Client-linux_x86-3.0.13.run 33947822 SHA256 abf5791ca97df52e7028dd69d18f4496a16843d7635207e9563eb4c1b47808a9 SHA512 7d875a35bec95e1e5666f03fd7aeeeb19a5a418e5dd72aa41757c63a1ff7c9d9a6983bcc23fb5daa06d191762f55a2efa3b9a1bbab8ec5fe3fb8c5fde05d4db0 WHIRLPOOL 6c7233f8b36c53f4f3ce4d64a7a1e445948a77c561a6bb3f8b89698eba2071a67fa67fee4fcdeea8475c03a64b1a0de5d00d8afde901a7131f41a9d5947b3927
-EBUILD teamspeak-client-bin-3.0.11.1.ebuild 1779 SHA256 06fb0c06eb913ba34e57027e677f27b0f81d066023129ca24d8f9efb410c6f61 SHA512 dcc0137636477c1479f6b42f13df8daee2235493621869205c3b17c37aec6219acc5a57dc824eb654a8c9da77ebadd4dfc93bfd3aef4eadde6c214afc5c151c9 WHIRLPOOL d0569d51d654829528ec6f79a867fde72a7847ccb4a8400b0d5aa2fc29d35507c4dcb213c8681bbc0f5c9ffb81d859033ec8e0ec76ae7c0e63f7c41eb514048c
-EBUILD teamspeak-client-bin-3.0.12.ebuild 1777 SHA256 ee5e1911c21ae29d2944cf349eb04a052e4e20762d46899ba551bb2c6e06f0e4 SHA512 4df16d2a63b03558cf563817abf6109cd32a3f6a0e97a6791ecfbcf9a70365e53c421d6edeb2b6e52ed7bed6a354e437e3ccc143de19b551a0f56d2b724745ed WHIRLPOOL fa57272a79ac037ffdbeb5940b740fd9654a25d782cb7dbe34297349475eb00fc6cab6fbc1f2d6e2efbbb5813aade6f80465c2e31379b49f1fd38c864c9d7cc7
+DIST TeamSpeak3-Client-linux_x86-3.0.16.run 36484150 SHA256 3fb21e9b428c0b535c90b0a191bcf1baae29bf99be7cf4621b9da276dd5e76ac SHA512 67b1da2769b1a34cd1affc3e36c1d74d7225711666e1c6d0ededbc4c0dc94d52b9d07181ea89db4d8ec09e58f9e61081f981663338ed7d7ec8efac3719f4b0ad WHIRLPOOL 9c2d51ae9d5a77b833ce7ee400cc611df6727e4793de51d6c95fa8e864d5f17bfe2272ac451751250333ac567bb5b3d4366184113f0d74545ed36088dc2bf438
 EBUILD teamspeak-client-bin-3.0.13.1.ebuild 2086 SHA256 cab4c1dc8c2c299a117579eee67c6641e12930ad42365124fc7916ac42f8aa3f SHA512 7964421c0359325977d4fb0be1f3f637a5801d3839fc1edbeb4f457dbc73bb7c07545487ca36b3b93dbb173edb2978b1276266164f68b53204687b4ed9fadcf5 WHIRLPOOL 882c03b1423c2ed3fa0e18db9b21578d22986c6db2f46c3680bd327729731dfddbb1760edb9ce4d7477b4916daf11e67e7c160c477c85d574e2cc5ccaf912b31
-EBUILD teamspeak-client-bin-3.0.13.ebuild 2084 SHA256 6450d32b7e6aea9069ca5cd6cc836d28c169910afee570e7f8de55571639c3f6 SHA512 a30763cd4e291df2bcd9721a271544586f436173cf3fa17feded01b8105b94a742229121d68a40a8f9a620682c4fd9e47e750ac46173bf147ea59ca222ad3283 WHIRLPOOL d47ef35c784e1e5b6e528c7e6a56c9c649b09d66d06dcbc52fcc6c986b551df19e5fb8ccacda4d491592c76bcc505fd08259ebf13b6bb1efde1426daeef1c24c
-MISC ChangeLog 8194 SHA256 6511e57add7024708323bd53dfc38728bc859fa2f08f817fe77dcb4a2c2d82e0 SHA512 b8aa33ec0bd5907e0210066b2101bbf2d8a1f34d1e59d3966dac67de6ce2cc42ce8ca60821e3bf5fc30d9286b2e9f73bac7dc56607cdc8d01c1796e9474094c4 WHIRLPOOL d9e70074fc3b24ca9a9a8b6442487dd15c2e167c86e25ef2ba70ed42fd9df60056f39bb7148d7a7fe02415d4430bc96777f50e4a5b526952ecd8495dac0ea88f
-MISC metadata.xml 303 SHA256 8c9bd8cfcc5e316b4cf2dd5c6df0a08710fb2d1c528fcf47b89291d6a7540f27 SHA512 198b16dacbce849db03da29073bbc516150b46de9d2154fb6a1e9b7030a416acb95ca5b9df8458ba39ef7b5bf75265f9e791b45c227fda9a49383e9973ee0557 WHIRLPOOL cd105c1a3576ff52310a1dfb56a99d47e7bfed522cce06fc88379ad84e909ecde43655f5e8efcf78afe9b6383a18d29eded00c77a1c89427d1167a087a53b305
+EBUILD teamspeak-client-bin-3.0.16.ebuild 2212 SHA256 460069312e26c80424df7244a5262be323a5f57bb340762b164a6e9d2b9c5356 SHA512 243c69c758e431156e823eb58e2a1742729e5fb63ace4a64407cd25352f2cef7850d34d1eaf6c32369048de52a1569fac2c2518412d09e5fd4c5f04791651987 WHIRLPOOL 8d585dd3219786a9bb09032a12fe8ec9565c15acd9cbe02440394f9b4397cca6a6a43612b37e09d8c179f6382086e40a34147b7afa71a0e2e5bb41f0b0aba4d9
+MISC ChangeLog 8567 SHA256 e7c47932834ce30ed07a08f14a36aa8e008b5e7ac6f12557b3b3f437cbd53935 SHA512 6890935f243d2a16cd862f09836585ea5ffe01ccd144e1f41c6275994ddeffad867704cc9c792993922a8f88e79f4d090dd1756012b0cbd56990ea753932e41d WHIRLPOOL 9d491d642e53400757db54d28435045acc3f5cbf4f56064407b09accb74aec5ed5711fc5b001a9259c7a5af44aea1460c53a3ea518dfce8a23dc12145349c9d7
+MISC metadata.xml 427 SHA256 da4fcc41e5e75155a236b870ba52cb1d4ab0b2246c12dbd0255a55cffba47ab1 SHA512 a1fb55fcc26beb9b5fd63e148deb7806827babc8c6123d9f35201a8813575f8ecef27a89c57151b7e7d74ea9bdadf059f1d9ea7fbbb62888e905ec3fd9cf022d WHIRLPOOL aec3302ecd40ab2bc27668d9e01149e9b7388b5caf0bb7eff1de54286b52d9978851bde8551fd680fe3ba67398b1aa8bf1829c53dfebfccbe9e6d60b5b2d8710
