@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
+  <herd>proxy-maintainers</herd>
   <maintainer>
-    <email>maintainer-needed@gentoo.org</email>
+    <email>gentoo@karolherbst.de</email>
+    <name>Karol Herbst</name>
+    <description>Proxy-Maintainer. Assign bugs to him</description>
   </maintainer>
   <longdescription>TeamSpeak Client (Voice Communication Software)</longdescription>
 </pkgmetadata>
