@@ -1,26 +1,35 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak-client-bin/teamspeak-client-bin-3.0.11.1.ebuild,v 1.1 2013/08/07 20:25:49 tomwij Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak-client-bin/teamspeak-client-bin-3.0.16.ebuild,v 1.1 2015/01/15 16:41:50 mrueg Exp $
 
-EAPI=5
+EAPI="5"
 
 inherit eutils unpacker
 
 DESCRIPTION="TeamSpeak Client - Voice Communication Software"
 HOMEPAGE="http://www.teamspeak.com/"
 LICENSE="teamspeak3"
+
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 RESTRICT="fetch mirror strip"
+IUSE="alsa pulseaudio"
+
+REQUIRED_USE="|| ( alsa pulseaudio )"
 
 SRC_URI="amd64? ( http://ftp.4players.de/pub/hosted/ts3/releases/${PV}/TeamSpeak3-Client-linux_amd64-${PV/_/-}.run )
 	x86? ( http://ftp.4players.de/pub/hosted/ts3/releases/${PV}/TeamSpeak3-Client-linux_x86-${PV/_/-}.run )"
 
-RDEPEND="dev-qt/qtcore:4
-	dev-qt/qtgui:4[accessibility,xinerama]
-	dev-qt/qtsql:4
+RDEPEND="
+	dev-qt/qtcore:5
+	dev-qt/qtgui:5[accessibility]
+	dev-qt/qtnetwork:5
+	dev-qt/qtsql:5[sqlite]
+	dev-qt/qtwidgets:5
 	sys-libs/glibc
-	sys-libs/zlib"
+	sys-libs/zlib
+	alsa? ( media-libs/alsa-lib )
+	pulseaudio? ( media-sound/pulseaudio )"
 
 S="${WORKDIR}"
 
@@ -37,6 +46,16 @@ pkg_nofetch() {
 src_prepare() {
 	# Remove the qt-libraries as they just cause trouble with the system's Qt, see bug #328807.
 	rm libQt* || die "Couldn't remove bundled Qt libraries."
+	rm -r accessible platforms sqldrivers qt.conf || die "Couldn't remove bundle Qt files."
+
+	# Remove unwanted soundbackends.
+	if ! use alsa ; then
+		rm soundbackends/libalsa* || die
+	fi
+
+	if ! use pulseaudio ; then
+		rm soundbackends/libpulseaudio* || die
+	fi
 
 	# Rename the tsclient to its shorter version, required by the teamspeak3 script we install.
 	mv ts3client_linux_* ts3client || die "Couldn't rename ts3client to its shorter version."
