@@ -1,14 +1,0 @@
-DEFINED_PHASES=install nofetch prepare unpack
-DESCRIPTION=TeamSpeak Client - Voice Communication Software
-EAPI=5
-HOMEPAGE=http://www.teamspeak.com/
-IUSE=alsa pulseaudio
-KEYWORDS=~amd64 ~x86
-LICENSE=teamspeak3
-RDEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4[accessibility,xinerama] dev-qt/qtsql:4 sys-libs/glibc sys-libs/zlib alsa? ( media-libs/alsa-lib ) pulseaudio? ( media-sound/pulseaudio )
-REQUIRED_USE=|| ( alsa pulseaudio )
-RESTRICT=fetch mirror strip
-SLOT=0
-SRC_URI=amd64? ( http://ftp.4players.de/pub/hosted/ts3/releases/3.0.13/TeamSpeak3-Client-linux_amd64-3.0.13.run ) x86? ( http://ftp.4players.de/pub/hosted/ts3/releases/3.0.13/TeamSpeak3-Client-linux_x86-3.0.13.run )
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=da53328451ff922ec42c1b5f8a09bbc7
