@@ -1,5 +1,5 @@
 ####################################################################
-# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.16287 2015/01/15 00:02:10 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.16288 2015/01/15 16:39:27 mrueg Exp $
 #
 # When you add an entry to the top of this file, add your name, the date, and
 # an explanation of why something is getting masked. Please be extremely
@@ -610,6 +610,7 @@ dev-libs/grantlee:5
 media-gfx/phototonic
 >=media-sound/drumstick-1.0.0
 >=media-sound/kmetronome-1.0.0
+>=media-sound/teamspeak-client-bin-3.0.16
 x11-misc/kaqaz
 
 # Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org> (03 Sep 2014)
