@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9683 2015/01/15 13:35:29 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9684 2015/01/15 16:39:27 mrueg Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  15 Jan 2015; Manuel Rüger <mrueg@gentoo.org> package.mask:
+  Add media-sound/teamspeak-client-bin to qt5 package.mask
 
   15 Jan 2015; Pacho Ramos <pacho@gentoo.org>
   arch/amd64/no-emul-linux-x86/package.use.stable.mask,
